Correct the alignment of the header

--- a/app/assets/stylesheets/components/slot-picker/_slot-picker-times.scss
+++ b/app/assets/stylesheets/components/slot-picker/_slot-picker-times.scss
@@ -107,10 +107,6 @@
 
 .js-slot-picker-header {
   outline: none;
-
-  @include media(tablet) {
-    float: right;
-  }
 }
 
 .slot-picker-times__selection-visually-hidden {
